// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusLabel /> statuses renders bordered 1`] = `
<span
  className="fxkmbac"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 2`] = `
<span
  className="fp4cqhg"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 3`] = `
<span
  className="f18v1y22"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 4`] = `
<span
  className="fwrj58t"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 5`] = `
<span
  className="fakofo5"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 6`] = `
<span
  className="f1wt9fyc"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 7`] = `
<span
  className="f12unntn"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders bordered 8`] = `
<span
  className="ft7kkf6"
>
  <span>
    plus
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 1`] = `
<span
  className="f1bz66r8"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 2`] = `
<span
  className="f11pacc7"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 3`] = `
<span
  className="fln3kpp"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 4`] = `
<span
  className="f1rz6hwc"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 5`] = `
<span
  className="f10udsrp"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 6`] = `
<span
  className="f1ewx5km"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 7`] = `
<span
  className="f1qn956o"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders inverted state 8`] = `
<span
  className="fdwkl6h"
>
  <span>
    plus
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 1`] = `
<span
  className="fhkoho"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 2`] = `
<span
  className="f1iovmq4"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 3`] = `
<span
  className="fp9444y"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 4`] = `
<span
  className="fk0q2dx"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 5`] = `
<span
  className="f1id3wt"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 6`] = `
<span
  className="f1faqyjg"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 7`] = `
<span
  className="f1k2v9oj"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders label 8`] = `
<span
  className="fivwv0a"
>
  <span>
    plus
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 1`] = `
<span
  className="f3aa7lj"
>
  <span>
    notice
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 2`] = `
<span
  className="fvg7io7"
>
  <span>
    info
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 3`] = `
<span
  className="f1b1lunt"
>
  <span>
    success
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 4`] = `
<span
  className="f1b3onmm"
>
  <span>
    warning
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 5`] = `
<span
  className="f14fdix2"
>
  <span>
    danger
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 6`] = `
<span
  className="f1neatuf"
>
  <span>
    muted
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 7`] = `
<span
  className="f1guk7jc"
>
  <span>
    luxury
  </span>
</span>
`;

exports[`<StatusLabel /> statuses renders uppercased state 8`] = `
<span
  className="fjjwx5d"
>
  <span>
    plus
  </span>
</span>
`;
